--- a/glide.yaml
+++ b/glide.yaml
@@ -1,14 +1,14 @@
-package: github.com/aidan-/cloudtrailbeat
+package: github.com/buroa/cloudtrailbeat
 import:
 - package: github.com/aws/aws-sdk-go
-  version: ^1.5.2
+  version: 1.13.56
   subpackages:
   - aws
   - aws/session
   - service/s3
   - service/sqs
 - package: github.com/elastic/beats
-  version: ^5.0.0
+  version: 5.0.0
   subpackages:
   - libbeat/beat
   - libbeat/common
